fix: megamenu alignment with page main body and header

--- a/theme/bootstrap-override/bootstrap-italia/_megamenu.scss
+++ b/theme/bootstrap-override/bootstrap-italia/_megamenu.scss
@@ -5,6 +5,8 @@
       &.active {
         .dropdown {
           a.nav-link {
+            padding-right: 18px;
+            padding-left: 18px;
             border-color: #fff;
             border-left: 0;
             background: transparent;
