--- a/theme/extras/_blocks.scss
+++ b/theme/extras/_blocks.scss
@@ -17,9 +17,4 @@
       }
     }
   }
-
-  > * {
-    padding-right: 24px !important;
-    padding-left: 24px !important;
-  }
 }
